--- a/GB_EMULATOR/GB_EMULATOR.vcxproj
+++ b/GB_EMULATOR/GB_EMULATOR.vcxproj
@@ -161,7 +161,7 @@ xcopy "$(SolutionDir)external\SDL2_TTF\lib\$(PlatformTarget)\*.dll" "$(OutDir)" 
     <ClCompile Include="src\cpu.cpp" />
     <ClCompile Include="src\emu.cpp" />
     <ClCompile Include="src\instructions.cpp" />
-    <ClCompile Include="src\interrupt.cpp" />
+    <ClCompile Include="src\ram.cpp" />
     <ClCompile Include="src\timer.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -171,7 +171,7 @@ xcopy "$(SolutionDir)external\SDL2_TTF\lib\$(PlatformTarget)\*.dll" "$(OutDir)" 
     <ClInclude Include="include\cpu.h" />
     <ClInclude Include="include\emu.h" />
     <ClInclude Include="include\instructions.h" />
-    <ClInclude Include="include\interrupt.h" />
+    <ClInclude Include="include\ram.h" />
     <ClInclude Include="include\timer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
